[gd_scene load_steps=6 format=2]

[ext_resource path="res://fuente/Fake Boss.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fuente/Error.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://menuInicio.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 65
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="titulo" type="Label" parent="."]
margin_left = 204.772
margin_top = 24.3435
margin_right = 831.772
margin_bottom = 158.344
custom_fonts/font = SubResource( 1 )
text = "PING PONG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texGanador" type="Label" parent="."]
margin_left = 24.0
margin_top = 196.0
margin_right = 1000.0
margin_bottom = 330.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 804.961
margin_top = 555.366
margin_right = 1021.96
margin_bottom = 595.366
text = "v1.0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 13.0698
margin_top = 548.0
margin_right = 230.069
margin_bottom = 588.0
text = "CREADO POR SCION
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 140.0
margin_top = 240.0
margin_right = 374.0
margin_bottom = 265.0
text = "Jugador 1"
breakpoint_gutter = true
fold_gutter = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="."]
margin_left = 650.0
margin_top = 240.0
margin_right = 884.0
margin_bottom = 265.0
text = "Jugador 2"
breakpoint_gutter = true
fold_gutter = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Button" type="Button" parent="."]
margin_left = 378.184
margin_top = 337.373
margin_right = 645.184
margin_bottom = 439.373
custom_fonts/font = SubResource( 2 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 190.0
margin_top = 290.0
margin_right = 316.0
margin_bottom = 426.0
text = "Controles:
Arriba= w
Abajo= S
+Velocidad=R
pausa= P"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 710.0
margin_top = 290.0
margin_right = 860.0
margin_bottom = 426.0
text = "Controles:
Arriba= UP
Abajo= DOWN
+Velocidad= ESPACIO
pausa= P"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
